--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: macos-latest
     env:
       FC: gfortran-11
+    strategy:
+      matrix:
+        shared: [ON, OFF]
 
     steps:
     
@@ -44,11 +47,14 @@ jobs:
         cd bufr
         mkdir build 
         cd build
-        cmake -DTEST_FILE_DIR=/Users/runner/data -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON ..
+        cmake -DTEST_FILE_DIR=/Users/runner/data -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON -DENABLE_SHARED_LIBS=${{ matrix.shared }} ..
         make -j2 VERBOSE=1
         make install
         cd python
         sudo python3 setup.py install
+        cd ..
+        ls -l ./install
+        ls -l ./install/lib
 
     - name: test-bufr
       run: |
