--- a/utils/sinv.f90.in
+++ b/utils/sinv.f90.in
@@ -14,11 +14,10 @@ PROGRAM SINV
   PARAMETER (MAXS=1000)
 
   CHARACTER(255) FILE,tbldir
-  CHARACTER(100) cmtdir
   CHARACTER(8)   SUBSET
   CHARACTER      ci*16,cj*80
   DIMENSION      isat(0:maxs,0:maxs)
-  real(8)        arr(2,maxa),said(maxa),siid(maxa)
+  real(8)        said(maxa),siid(maxa)
   logical        exist
 
   DATA BMISS  /10E10/
