more fixes in response to code comments

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@
 # This function builds, links, and runs a test program.
 function(create_test name kind)
   add_executable(${name}_${kind} ${name}.F90)
-  target_link_libraries(${name}_${kind} PRIVATE bufr_4
+  target_link_libraries(${name}_${kind} PRIVATE bufr_4)
   set_target_properties(${name}_${kind} PROPERTIES COMPILE_FLAGS "${fortran_${kind}_flags}")
   set_target_properties(${name}_${kind} PROPERTIES Fortran_MODULE_DIRECTORY
     ${CMAKE_CURRENT_BINARY_DIR}/include_${kind})
