--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -74,11 +74,7 @@ list(APPEND test_IN_srcs
   test_IN_8.F90
   )
 
-list(APPEND test_OUT_2_srcs
-  test_OUT_2.F
-  )
-
-list(APPEND test_OUT_other_srcs
+list(APPEND test_OUT_srcs
   test_OUT_3.F
   test_OUT_4.F
   test_OUT_5.F
@@ -117,11 +113,6 @@ function(bufr_add_test TESTNAME EXENAME)
            COMMAND ${CMAKE_BINARY_DIR}/bin/test_wrapper_OUT.sh ${EXENAME})
 endfunction()
 
-function(bufr_add_test_preAPX TESTNAME EXENAME)
-  add_test(NAME ${TESTNAME}
-           COMMAND ${CMAKE_BINARY_DIR}/bin/test_wrapper_OUT.sh ${EXENAME} "Y")
-endfunction()
-
 list(APPEND test_kinds 4 8 d)
 
 set(fortran_8_defs INTSIZE_8)
@@ -131,6 +122,7 @@ foreach(kind ${test_kinds})
   create_test(intest1 ${kind})
   create_test(intest2 ${kind})
   create_test(outtest1 ${kind})
+  create_test(outtest2 ${kind})
 endforeach()
 
 # IN tests
@@ -149,24 +141,8 @@ foreach(test_src ${test_IN_srcs})
   endforeach()
 endforeach()
 
-# OUT_2 tests; these use the bufr_add_test_preAPX function
-foreach(test_src ${test_OUT_2_srcs})
-  string(REPLACE ".F" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
-    set(test     ${testPref}_${kind})
-    set(test_exe ${test}.x)
-    add_executable(${test_exe} ${test_src})
-    set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
-                                                 "${fortran_${kind}_flags}")
-    target_compile_definitions(${test_exe} PRIVATE "${fortran_${kind}_defs}")
-    add_dependencies(${test_exe} bufr_4)
-    target_link_libraries(${test_exe} PRIVATE bufr::bufr_4)
-    bufr_add_test_preAPX(${test} ${test_exe})
-  endforeach()
-endforeach()
-
-# all other OUT tests
-foreach(test_src ${test_OUT_other_srcs})
+# OUT tests
+foreach(test_src ${test_OUT_srcs})
   string(REGEX REPLACE "(.F90|.F)" "" testPref ${test_src})
   foreach(kind ${test_kinds})
     set(test     ${testPref}_${kind})
