--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -60,4 +60,9 @@ jobs:
       run: |
         mkdir ~/data
         cp $GITHUB_WORKSPACE/bufr/build/test/bufr-11.6.0.tgz ~/data
-        
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: test_out5_8
+        path: |
+          bufr/build/test/out5_8.txt
