--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,7 +66,6 @@ add_custom_command(
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testrun)
 
 list(APPEND test_IN_srcs
-  test_IN_4.F
   test_IN_5.F
   test_IN_6.F
   test_IN_7.F
@@ -131,6 +130,7 @@ foreach(kind ${test_kinds})
   create_test(intest1 ${kind})
   create_test(intest2 ${kind})
   create_test(intest3 ${kind})
+  create_test(intest4 ${kind})
 endforeach()
 
 # IN tests
