--- a/utils/sinv.f90.in
+++ b/utils/sinv.f90.in
@@ -88,7 +88,7 @@ PROGRAM SINV
         if(isat(i,j).gt.0) then
            jsat=jsat+isat(i,j)
            call satcode(lunbf,i,ci,j,cj)
-           write(*,'(i3.3,2x,a,2x,i10,2x,i3.3,6x,a)')i,ci,isat(i,j),j,adjustl(trim(cj))
+           write(*,'(i3.3,2x,a,2x,i10,2x,i3.3,6x,a)')i,ci,isat(i,j),j,trim(adjustl(cj))
         endif
      enddo
   enddo
