--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,16 +27,15 @@ list(APPEND fortran_src
   ufbrw.f ufbseq.f ufbsp.f ufbstp.f ufbtab.f ufbtam.f ufdump.f upb.f upbb.f upc.f upds3.f upftbv.f
   ups.f uptdd.f usrtpl.f wrcmps.f wrdxtb.f writcp.f writdx.f writlc.f writsa.f writsb.f
   wrtree.f wtstat.f arallocf.f ardllocf.f closbf.f ireadmt.f irev.F isetprm.f openbf.f pkvs01.f
-  wrdlen.F fortran_open.f90 fortran_close.f90 bufr_interface.f90 pkb8.f upb8.f up8.f setim8b.f90
-  x48.F x84.F)
+  wrdlen.F fortran_open.f90 fortran_close.f90 bufr_interface.F90 pkb8.f upb8.f up8.f setim8b.f90
+  bufr_c2f_interface.F90 x48.F x84.F)
 
 list(APPEND c_src
-  arallocc.c ardllocc.c bort_exit.c ccbfl.c cmpia.c cmpstia1.c cmpstia2.c cobfl.c cpmstabs.c
-  crbmg.c cread.c cwbmg.c dlloctbf.c icvidx.c inittbf.c nummtb.c rbytes.c restd.c sorttbf.c
-  srchtbf.c strtbfe.c stseq.c wrdesc.c)
+  arallocc.c ardllocc.c bort_exit.c cmpia.c cmpstia1.c cmpstia2.c cpmstabs.c cread.c crwbmg.c
+  dlloctbf.c icvidx.c inittbf.c nummtb.c restd.c sorttbf.c srchtbf.c strtbfe.c stseq.c wrdesc.c)
 
 list(APPEND c_hdr
-  cfe.h cobfl.h cread.h mstabs.h bufr_interface.h)
+  cfe.h cread.h mstabs.h bufr_interface.h)
 
 # Create the bvers.f file and bfrini.f90 files
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bvers.f.in ${CMAKE_CURRENT_BINARY_DIR}/bvers.f @ONLY)
