--- a/utils/sinv.f90.in
+++ b/utils/sinv.f90.in
@@ -3,6 +3,8 @@
 !>
 !> @author J Woollen @date 2010
 
+!> Produces a BUFR file inventory by satellite type.
+!>
 !> Usage: sinv \<satbufrfile\> will print inventory of satellites by platform and instrument.
 !>
 !> @return 0 for success, error message otherwise.
@@ -10,29 +12,25 @@
 !> @author J Woollen @date 2010
 PROGRAM SINV
 
-  PARAMETER (MAXA=16000000)
-  PARAMETER (MAXS=1000)
+  parameter (maxa=16000000)
+  parameter (maxs=1000)
 
   CHARACTER(255) FILE,tbldir
   CHARACTER(240) cmtdir
   CHARACTER(8)   SUBSET
   CHARACTER      ci*16,cj*80
-  DIMENSION      isat(0:maxs,0:maxs)
-  real(8)        said(maxa),siid(maxa)
   logical        exist
+  integer, allocatable :: isat(:,:)
+  real*8, allocatable :: said(:), siid(:)
 
-  DATA BMISS  /10E10/
   DATA LUNBF  /20/
 
   !-----------------------------------------------------------------------
   !-----------------------------------------------------------------------
 
-  isat=0
   jsat=0
-  said=0
-  ssid=0
 
-  !  get filename argument
+  ! get filename argument
 
   NARG=IARGC()
   IF(NARG<1) THEN
@@ -44,7 +42,7 @@ PROGRAM SINV
   inquire(file=file,exist=exist)
   if (.not.exist) call bort(trim(file)//' does not exist')
 
-  !  define master table directory
+  ! define master table directory
 
   call openbf(lunbf,'FIRST',lunbf)  ! need to call openbf prior to calling mtinfo
   IF(NARG==2) THEN ! arg 2 would be a user defined table dir
@@ -54,6 +52,16 @@ PROGRAM SINV
      cmtdir = '@MASTER_TABLE_DIR_F@'
      call mtinfo(cmtdir,3,4) 
   endif
+
+  ! allocate storage arrays
+
+  allocate( isat(0:maxs,0:maxs), stat=iost1 )
+  allocate( said(maxa), stat=iost2 )
+  allocate( siid(maxa), stat=iost3 )
+  if ( ( iost1 .ne. 0 ) .or. ( iost2 .ne. 0 ) .or. ( iost3 .ne. 0 ) ) call exit(3)
+  isat=0
+  said=0
+  ssid=0
 
   ! read through the file and collect counts of satid and sat inst combinations
 
@@ -71,8 +79,8 @@ PROGRAM SINV
   ! make a table of sat ids and sat instruments
 
   do n=1,max(nret,nrex)
-     i = said(n)
-     j = siid(n)
+     i = nint(said(n))
+     j = nint(siid(n))
      if(i>maxs.or.i<0) i=0
      if(j>maxs.or.j<0) j=0
      isat(i,j) = isat(i,j)+1
@@ -95,11 +103,11 @@ PROGRAM SINV
 
   write(*,'(/23x,i10/)') jsat
 
+  deallocate( isat )
+  deallocate( said )
+  deallocate( siid )
+
 end program SINV
-!> @file
-!> @brief Looks in the BUFR tables to get meaning strings for satellite platform and instrument codes
-!>
-!> @author J Woollen @date 2010
 
 !> This subroutine looks in the master BUFR tables for meaning strings associated with specified
 !> code figures for the satellite platform and instrument.
